test(*Test): write @DisplayName per each test method
각 테스트 함수에 @DisplayName을 작성하여 무엇을 테스트하기 위한 코드인지
명시.
ApplicationTest.java에 추가적인 테스트 코드 작성.